# suitesparse

./: .gitignore  INSTALL.md  README.md  build.bash  sync.bash
addons/AMD/: Makefile.am  amd.pc.in  configure.ac  post-copy-hook.bash  post-install-hook.bash
addons/AMD/Demo/: Makefile.am
addons/AMD/Doc/: Makefile.am
addons/AMD/Source/: Makefile.am
addons/BTF/: Makefile.am  btf.pc.in  configure.ac
addons/BTF/Doc/: Makefile.am
addons/BTF/Source/: Makefile.am
addons/CAMD/: Makefile.am  camd.pc.in  configure.ac  post-copy-hook.bash  post-install-hook.bash
addons/CAMD/Demo/: Makefile.am
addons/CAMD/Doc/: Makefile.am
addons/CAMD/Source/: Makefile.am
addons/CCOLAMD/: Makefile.am  ccolamd.pc.in  configure.ac  post-copy-hook.bash  post-install-hook.bash
addons/CCOLAMD/Demo/: Makefile.am
addons/CCOLAMD/Source/: Makefile.am
addons/CHOLMOD/: Makefile.am  cholmod.pc.in  configure.ac  post-copy-hook.bash  post-install-hook.bash
addons/CHOLMOD/Check/: Makefile.am
addons/CHOLMOD/Cholesky/: Makefile.am
addons/CHOLMOD/Core/: Makefile.am
addons/CHOLMOD/Demo/: Makefile.am
addons/CHOLMOD/Doc/: Makefile.am
addons/CHOLMOD/Include/: Makefile.am  cholmod_config.h.in
addons/CHOLMOD/MatrixOps/: Makefile.am
addons/CHOLMOD/Modify/: Makefile.am
addons/CHOLMOD/Partition/: Makefile.am
addons/CHOLMOD/Supernodal/: Makefile.am
addons/COLAMD/: Makefile.am  colamd.pc.in  configure.ac  post-copy-hook.bash  post-install-hook.bash
addons/COLAMD/Demo/: Makefile.am
addons/COLAMD/Doc/: Makefile.am
addons/COLAMD/Source/: Makefile.am
addons/CXSparse/: Makefile.am  configure.ac  cxsparse.pc.in
addons/CXSparse/Demo/: Makefile.am
addons/CXSparse/Doc/: Makefile.am
addons/CXSparse/Source/: Makefile.am
addons/KLU/: Makefile.am  configure.ac  klu.pc.in
addons/KLU/Demo/: Makefile.am
addons/KLU/Doc/: Makefile.am
addons/KLU/Source/: Makefile.am
addons/LDL/: Makefile.am  configure.ac  ldl.pc.in  post-copy-hook.bash  post-install-hook.bash
addons/LDL/Demo/: Makefile.am
addons/LDL/Doc/: Makefile.am
addons/LDL/Source/: Makefile.am
addons/RBio/: Makefile.am  configure.ac  rbio.pc.in
addons/RBio/Demo/: Makefile.am
addons/RBio/Doc/: Makefile.am
addons/RBio/Source/: Makefile.am
addons/SPQR/: Makefile.am  configure.ac  spqr.pc.in
addons/SPQR/Demo/: Makefile.am
addons/SPQR/Doc/: Makefile.am
addons/SPQR/Source/: Makefile.am
addons/SuiteSparse_config/: Makefile.am  configure.ac  post-copy-hook.bash  post-install.bash  suitesparseconfig.pc.in
addons/UMFPACK/: Makefile.am  configure.ac  post-copy-hook.bash  post-install-hook.bash  umfpack.pc.in
addons/UMFPACK/Demo/: Makefile.am
addons/UMFPACK/Doc/: Makefile.am
addons/UMFPACK/Include/: Makefile.am
addons/UMFPACK/Source/: Makefile.am
addons/config/: check.am  common.am  include.am
addons/m4/: ax_check_pkg_lib.m4  ax_suitesparse_doc.m4
